# zkir

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SPECIFICATION.md
examples/: add.zkasm  fibonacci.zkasm
spec/src/: error.rs  instruction.rs  opcode.rs  register.rs
src/: lib.rs
tests/: cross_module.rs  end_to_end.rs  stress_tests.rs
zkir-assembler/: Cargo.toml
zkir-assembler/src/: assembler.rs  encoder.rs  error.rs  lexer.rs  lib.rs  parser.rs
zkir-assembler/tests/: integration_tests.rs  malformed_input.rs
zkir-disassembler/: Cargo.toml
zkir-disassembler/src/: decoder.rs  disassembler.rs  error.rs  formatter.rs  lib.rs
zkir-disassembler/tests/: integration_tests.rs
zkir-runtime/: Cargo.toml
zkir-runtime/src/: crypto.rs  decode.rs  deferred.rs  error.rs  execute.rs  io.rs  lib.rs  memory.rs  normalization_witness.rs  normalize.rs  observation.rs  range_check.rs  register_state.rs  state.rs  syscall.rs  vm.rs
zkir-runtime/tests/: bounds_propagation.rs  crypto_edge_cases.rs  deferred_integration_test.rs  integration_test.rs  memory_subsystem.rs  range_checking.rs  syscall_integration.rs  witness_collection_test.rs
zkir-spec/: Cargo.toml
zkir-spec/src/: analyzer.rs  bound.rs  config.rs  encoding.rs  error.rs  field.rs  instruction.rs  lib.rs  opcode.rs  program.rs  register.rs  trace.rs  validation.rs  value.rs
zkir-spec/tests/: bounds_and_validation.rs  encoding_tests.rs  value_types.rs
