[workspace]
resolver = "2"
members = [
    "spec",
    # "assembler",
    # "disassembler",
    # "cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/zkir"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
zkir-spec = { path = "spec" }
# zkir-assembler = { path = "assembler" }
# zkir-disassembler = { path = "disassembler" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Parsing
nom = "7"
logos = "0.14"

# Error handling
thiserror = "1"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1"

# Cryptography
sha2 = "0.10"

# Field arithmetic (for later)
# p3-field = { git = "https://github.com/Plonky3/Plonky3" }
# p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3" }

[profile.release]
lto = true
codegen-units = 1
