[package]
name = "zkir-assembler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Assembler for ZK IR v2.1"

[dependencies]
zkir-spec = { workspace = true }
thiserror = { workspace = true }
logos = { workspace = true }
nom = { workspace = true }

[dev-dependencies]
