[package]
name = "zkir-assembler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Assembler for ZKIR v3.4 - Variable limb architecture"

[dependencies]
zkir-spec = { workspace = true }
thiserror = { workspace = true }
logos = { workspace = true }

[dev-dependencies]
