[package]
name = "zkir-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ZK IR virtual machine (32-bit)"

[dependencies]
zkir-spec = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
