[package]
name = "zkir-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ZKIR v3.4 - Variable limb architecture virtual machine"

[dependencies]
zkir-spec = { workspace = true }
zkir-disassembler = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"

[dev-dependencies]
zkir-assembler = { workspace = true }
proptest = { workspace = true }
