[package]
name = "zkir-spec"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ZK IR specification - core types, opcodes, and encoding"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
